@@ -1,19 +1,19 @@
 package net.artux.pdanetwork.configuration;
 
-import org.springframework.beans.factory.annotation.Value;
+import net.artux.pdanetwork.service.util.ValuesService;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
 import springfox.documentation.service.ApiInfo;
-import springfox.documentation.service.ApiKey;
 import springfox.documentation.service.AuthorizationScope;
+import springfox.documentation.service.BasicAuth;
 import springfox.documentation.service.SecurityReference;
+import springfox.documentation.service.SecurityScheme;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spi.service.contexts.SecurityContext;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
-import springfox.documentation.swagger2.annotations.EnableSwagger2WebMvc;
 
 import java.util.Collections;
 import java.util.List;
@@ -22,27 +22,32 @@ import java.util.List;
 @EnableSwagger2
 public class SwaggerConfig {
 
+    private final ValuesService valuesService;
+
+    public SwaggerConfig(ValuesService valuesService) {
+        this.valuesService = valuesService;
+    }
+
+    private SecurityScheme basicAuthScheme() {
+        return new BasicAuth("basicAuth");
+    }
+
+    private SecurityReference basicAuthReference() {
+        return new SecurityReference("basicAuth", new AuthorizationScope[0]);
+    }
+
     private SecurityContext securityContext() {
-        return SecurityContext.builder().securityReferences(defaultAuth()).build();
-    }
-
-    private ApiKey apiKey() {
-        return new ApiKey("JWT", "Authorization", "header");
-    }
-
-    private List<SecurityReference> defaultAuth() {
-        AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
-        AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
-        authorizationScopes[0] = authorizationScope;
-        return Collections.singletonList(new SecurityReference("JWT", authorizationScopes));
+        return SecurityContext.builder()
+                .securityReferences(List.of(basicAuthReference()))
+                .build();
     }
 
     @Bean
     public Docket api() {
         return new Docket(DocumentationType.SWAGGER_2)
                 .apiInfo(apiInfo())
-                .securityContexts(Collections.singletonList(securityContext()))
-                .securitySchemes(Collections.singletonList(apiKey()))
+                .securityContexts(List.of(securityContext()))
+                .securitySchemes(List.of(basicAuthScheme()))
                 .select()
                 .apis(RequestHandlerSelectors.basePackage("net.artux.pdanetwork"))
                 .paths(PathSelectors.any())
@@ -52,7 +57,7 @@ public class SwaggerConfig {
     private ApiInfo apiInfo() {
         return new ApiInfo(
                 "PDA NETWORK API",
-                "Описание сервисов Rest API.",
+                "Описание сервисов Rest API. Админ панель: " + valuesService.getAddress() + "/utility",
                 "1.0",
                 "",
                 null,
